Mettre le code javascript dans un fichier .js au lieu de le mettre dans le .html

--- a/version3/index.html
+++ b/version3/index.html
@@ -223,12 +223,6 @@
 
 </body>
 
-<script>
-    function spinImage(id) {
-        document.getElementById(id).classList.toggle('arrow-down-rotated')
-    }
-</script>
-
-
+<script src="script.js"></script>
 
 </html>
